# icfp2018

./: .gitignore  Main.hs  README.md  icfp2018.cabal
