name:                icfp2018
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Sjoerd Visscher
maintainer:          sjoerd@w3future.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable icfp2018
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >=4.10 && <5,
                        cereal,
                        containers,
                        bytestring,
                        mtl
  -- hs-source-dirs:
  default-language:     Haskell2010
